[package]
name = "server"
version = "0.1.0"
edition = "2021"


#[features]
#protobuf-codec = ["proto/protobuf-codec", "bytes"]
#prost-codec = ["proto/prost-codec"]

[workspace]
members =["proto"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
raft ={path = "../raft-rs" }
hyper = "0.14"
anyhow = "1.0.40"
protobuf = "2"
futures = "0.3"
async-channel = "1.6.1"
env_logger = "0.9.0"
bytes = { version = "1"}
thiserror = "1.0"
crc = "3.0.1"
slog = "2.2"
#bincode = "1.3.3"
proto = { path = "proto", default-features = false}
slog-envlogger = "2.1.0"
slog-stdlog = "4"
slog-term = "2.4.0"
slog-async = "2.3.0"
prost = "0.11"
prost-types = "0.11"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
tokio = { version = "1.16.1", features = ["full"] }
#winapi = "0.3.8"
actix-ratelimit = "0.3.1"
url = "2.4.0"
openssl-sys = "0.9"
openssl = "0.10"
actix = "0.13"
chrono = "0.4"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
client = { path = "../client" }
semver = "1.0"
